<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
    <item
        android:id="@+id/nav_timetable"
        android:orderInCategory="100"
        android:title="@string/timetable" />
    <item
        android:id="@+id/nav_student"
        android:orderInCategory="100"
        android:title="@string/student" />
    <item
        android:id="@+id/nav_groups"
        android:orderInCategory="100"
        android:title="@string/group" />
    <item
        android:id="@+id/nav_teachers"
        android:orderInCategory="100"
        android:title="@string/teacher" />
        <item
            android:id="@+id/nav_rooms"
            android:title="@string/room"
            android:orderInCategory="100" />
    <!--</group>-->



</menu>